layer header has right padding to avoid ovelapping scrollbar

--- a/app/assets/stylesheets/_layer-table.scss
+++ b/app/assets/stylesheets/_layer-table.scss
@@ -26,7 +26,7 @@
   top: 0;
   left: 0;
   padding-left: 16px;
-  padding-right: 2px;
+  padding-right: 16px;
   background-color: var(--color-bg-ambient-30);
   height: 34px;
   display: flex;
